--- a/src/components/hero.css
+++ b/src/components/hero.css
@@ -70,6 +70,7 @@ h1 {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
+        padding: 4em 1em;
     }
 
     h1 {
